--- a/add.html
+++ b/add.html
@@ -59,7 +59,7 @@ Second number<input type="text" name="num2" placeholder="Enter second number"><b
 Show Result here<input type="text" name="num3" placeholder="Result"> <br>
 <input type="button" class="btn border-2 border-red-500" value="addition" onclick="add()">
 <input type="button" class="btn bg-gradient-to-r from-purple-400 via-pink-500 to-red-500 " value="subtraction" onclick="sub()">
-<input type="button" class="btn bg-light-blue-600 opacity-25 " value="multiplecation" onclick="mul()">
+<input type="button" class="btn bg-light-blue-600 opacity-25 " value="multiplication" onclick="mul()">
 <input type="button" class="btn bg-blue-600 opacity-75" value="division" onclick="div()">
 <input type="button" value="sqre" onclick="sqre()">
 <input type="button" value="qube" onclick="qube()">
